ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kseniasavkina
spec:
  rules:
    - http:
        paths:
          - path: /comments-api
            backend:
              serviceName: comments-api
              servicePort: 80
          - path: /posts-api
            backend:
              serviceName: posts-api
              servicePort: 80
          - path: /admin
            backend:
              serviceName: admin
              servicePort: 80
